@@ -1,3 +1,9 @@
+2005-01-08  Martin Blom  <martin@blom.org>
+
+	* Try harder to satisfy outstanding CBD_POST requests at exit
+	(window close gadget, CTRL-C), using real Windows clipboard data
+	if possible.
+
 2005-01-07  Martin Blom  <martin@blom.org>
 
 	* Released version 1.3.1cvs (07.01.2005).
@@ -34,8 +40,8 @@
 
 	* Released version 1.3.1cvs (30.12.2004).
 
-	* Finished clipboard support. It works in the AmigaOS version
-	only!
+	* Finished clipboard support. It requires clipboard.device 50.2 or
+	higher in MorphOS!
     
 2004-12-19  Martin Blom  <martin@blom.org>
 
